--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
+    padding: 0;
+}
+
+.container {
+    max-width: 1440px;
 }
