--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-left: 30px;
 }
 
 .nav-left, .nav-right {
@@ -37,4 +36,19 @@
     justify-content: center;
     margin-right: 0px;
     margin-left: 0px;
+}
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
 }
