--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,39 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0%;
-    padding: 0;
+    padding: 0%;
 }
 
 .container {
     max-width: 1440px;
 }
+
+h1 {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 46px;
+    max-width: 700px;
+    color: white;
+}
+
+p {
+    font-weight: 300;
+    max-width: 600px;
+}
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
+}
+  
