--- a/css/about.css
+++ b/css/about.css
@@ -2,13 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 150px 50px;
-    background-color: #fafafa;
+    padding: 70px 110px;
 }
 
 .about-content {
     display: flex;
-    gap: 110px;
+    gap: 80px;
     max-width: 1800px;
     width: 100%;
     align-items: center;
@@ -28,7 +27,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
     margin: 0;
 }
 
@@ -39,4 +37,6 @@
 
 .about-text p {
     text-align: justify;
+    font-weight: 400;
+    line-height: 22px;
 }
