--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+.main-wrapper {
+    max-width: 1920px; /* Set the maximum width for the entire site */
+    margin: 0 auto; /* Horizontally center the content */
+    overflow-x: hidden; /* Prevent horizontal scroll for smaller screens */
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0%;
@@ -16,6 +22,13 @@ h1 {
     max-width: 700px;
     color: white;
 }
+
+h2 {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 800;
+    font-size: 36px;
+}
+
 
 p {
     font-weight: 300;
