--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,18 +1,34 @@
 .navbar {
-    background-color: #282828;
+    background-color: #1A1A1A;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav-container {
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     display: flex;
 }
 
-.nav-left, .nav-right {
+.navbar .nav-links {
     display: flex;
-    margin: 0px 60px;
-    gap: 60px;
+    align-items: center;
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar .nav-container .nav-links li {
+    margin: 0 25px;
+}
+
+.navbar .nav-container .order-now a {
+    margin: 0 25px;
 }
 
 .navbar a {
@@ -27,8 +43,8 @@
     color: #FEC114;
 }
 
-.logo img {
-    height: 50px; /* Adjust logo size as needed */
+.navbar .logo img {
+    width: 100px;
 }
 
 .logo {
@@ -36,6 +52,26 @@
     justify-content: center;
     margin-right: 0px;
     margin-left: 0px;
+    padding: 0 25px;
+}
+
+.order-now {
+    padding: 5px 10px;
+    font-weight: 700;
+    font-size: 13px;
+    text-transform: uppercase;
+    transition: background-color 1s, color 1s, border 1s;
+}
+
+.order-now.button {
+    background: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.order-now.button:hover {
+    background: black;
+    color: white;
 }
 
 /* Tablet */
