--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,6 @@
 .gallery {
     padding: 50px 0px;
+    padding-bottom: 100px;
 }
 
 .gallery-container {
@@ -12,57 +13,57 @@
 
 .gallery p {
     max-width: 550px;
+    margin: 10px 0;
 }
 
 .gallery h2 {
     margin: 0px 0px;
 }
 
-.slider{
-    width: 100%;
-    height: var(--height);
-    overflow: hidden;
-    margin-bottom: 20px;
+.img-gallery {
+    width: 85%;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 4 equal columns */
+    grid-template-rows: repeat(2, 1fr); /* 2 equal rows */
+    grid-gap: 30px;
 }
 
-.slider .list{
-    display: flex;
+.img-gallery img {
     width: 100%;
-    min-width: calc(var(--width) * var(--quantity));
-    position: relative;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-.slider .list .item{
-    width: var(--width);
-    height: var(--height);
+.img-gallery img:hover {
+    transform: scale(1.1) rotate(-3deg);
+    border-radius: 20px;
+    box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
+}
+
+.full-img {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+.full-img img  {
+    width: 90%;
+    max-width: 550px;
+}
+
+.full-img span {
     position: absolute;
-    left: 100%;
-    animation: autoRun 50s linear infinite;
-    transition: filter 0.5s;
-    animation-delay: calc( (50s / var(--quantity)) * (var(--position) - 1) - 50s)!important;
-}
-
-.slider .list .item img{
-    width: 100%;
-    border-radius: 10px;
-}
-
-@keyframes autoRun{
-    from{
-        left: 100%;
-    }to{
-        left: calc(var(--width) * -1);
-    }
-}
-
-.slider[reverse="true"] .item{
-    animation: reversePlay 50s linear infinite;
-}
-
-@keyframes reversePlay{
-    from{
-        left: calc(var(--width) * -1);
-    }to{
-        left: 100%;
-    }
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
 }
