--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 70px 110px;
+    background-color: white;
 }
 
 .about-content {
