--- a/css/location.css
+++ b/css/location.css
@@ -3,4 +3,88 @@
     justify-content: center;
     text-align: center;
     background-color: white;
+    padding: 100px 0;
 }
+
+.location-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+.location-text h2 {
+    margin: 0;
+}
+
+.location-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.location-details {
+    display: flex;
+    gap: 50px;
+}
+
+.opening-hours-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.opening-hours-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+}
+
+.opening-hours-header h3 {
+    font-size: 23px;
+    font-weight: 500;
+}
+
+.clock-icon {
+    margin-right: 15px;
+    background-color: #D9D9D9;
+    padding: 10px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clock-icon img {
+    width: 32px;
+    height: 32px;
+    font-weight: 150;
+}
+
+.opening-hours-content {
+    text-align: left;
+}
+
+.opening-hours-content table {
+    width: 100%;
+    border-collapse: separate;
+}
+
+.opening-hours-content td {
+    padding: 10px 40px;
+    padding-left: 0px;
+    text-align: left;
+}
+
+.contact-map iframe {
+    width: 100%;
+    width: 900px;
+    max-width: 1500px;
+    height: 480px;
+    border: 0;
+    border-radius: 30px;
+}
+
