In footer, make the underline for 'Deyi Rao' away and implement hover with yellow color

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,4 +15,10 @@
 
 .footer-text a {
     color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-text a:hover {
+    color: #FEC114;
 }
