--- a/css/reviews.css
+++ b/css/reviews.css
@@ -107,6 +107,17 @@
     opacity: 1;
 }
 
+/* Laptop */
+@media (max-width: 1440px) {
+    .swiper-button-prev::after {
+        margin-left: 50px;
+    }
+
+    .swiper-button-next::after {
+        margin-right: 50px;
+    }
+}
+
 /* Tablet */
 @media (max-width: 991px) {
     
