Add responsiveness for iPad 1025px width screen

--- a/css/about.css
+++ b/css/about.css
@@ -42,8 +42,10 @@
 }
 
 /* Tablet */
-@media (max-width: 991px) {
-    
+@media (max-width: 1024px) {
+    .about-content {
+        gap: 70px;
+    }
 }
   
 /* Mobile Landscape */
