--- a/css/location.css
+++ b/css/location.css
@@ -117,8 +117,11 @@
 }
 
 /* Tablet */
-@media (max-width: 991px) {
-    
+@media (max-width: 1024px) {
+    .contact-map iframe {
+        width: 350px;
+        height: 400px;
+    }
 }
   
 /* Mobile Landscape */
