--- a/css/reviews.css
+++ b/css/reviews.css
@@ -118,7 +118,7 @@
 }
 
 /* Laptop */
-@media (max-width: 1400px) {
+@media (max-width: 1440px) {
     .swiper-button-prev::after {
         margin-left: 0px;
     }
@@ -127,7 +127,7 @@
         margin-right: 0px;
     }
 
-    .swiper {
+    .reviews-slider {
         width: 70%;
     }
 
@@ -143,7 +143,7 @@
 
 /* Tablet */
 @media (max-width: 991px) {
-    .swiper {
+    .reviews-slider {
         width: 50%;
     }
 
