--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ html {
     max-width: 1920px;
     margin: 0 auto;
     overflow-x: hidden;
-    border: 1px solid black;
 }
 
 body {
@@ -35,6 +34,13 @@ p {
     font-weight: 400;
     max-width: 600px;
 }
+
+@media (min-width: 1920px) {
+    .main-wrapper {
+        border: 1px solid black;
+    }
+}
+
 
 /* Laptop */
 @media (max-width: 1440px) {
