--- a/css/gallery.css
+++ b/css/gallery.css
@@ -71,10 +71,23 @@
 }
 
 /* Tablet */
+@media (max-width: 1440px) {
+    .img-gallery {
+        grid-template-columns: repeat(4, 1fr); /* 3 equal columns */
+        grid-gap: 27px;
+    }
+
+    .gallery-text p {
+        max-width: 500px;
+    }
+}
+
+/* Tablet */
 @media (max-width: 1024px) {
     .img-gallery {
         width: 70%;
         grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
+        grid-gap: 24px;
     }
 
     .gallery-text p {
@@ -87,7 +100,7 @@
     .img-gallery {
         width: 65%;
         grid-template-columns: repeat(2, 1fr); /* 3 equal columns */
-        grid-template-rows: repeat(3, 1fr); /* 5 equal rows */
+        grid-gap: 21px;
     }
 
     .gallery-text p {
@@ -96,6 +109,10 @@
 }
 
 @media (max-width: 600px) {
+    .img-gallery {
+        grid-gap: 18px;
+    }
+
     .gallery-text p {
         max-width: 350px;
     }
@@ -103,6 +120,10 @@
   
 /* Mobile Portrait */
 @media (max-width: 479px) {
+    .img-gallery {
+        grid-gap: 15px;
+    }
+
     .gallery-text p {
         max-width: 250px;
     }
