--- a/css/location.css
+++ b/css/location.css
@@ -158,6 +158,10 @@
         height: 26px;
         font-weight: 130;
     }
+
+    .location-text p {
+        max-width: 500px;
+    }
 }
 
 @media (max-width: 867px) {
@@ -165,13 +169,55 @@
         font-size: 16px;
     }
 
+    .contact-map iframe {
+        width: 550px;
+        height: 400px;
+    }
+
     .location-text p {
-        max-width: 400px;
+        max-width: 500px;
     }
 
     .location-details {
         flex-direction: column-reverse;
         justify-content: center;
+        align-items: center;
+    }
+
+    .opening-hours-header h3 {
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .clock-icon {
+        margin-right: 15px;
+        background-color: #D9D9D9;
+        padding: 10px;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .clock-icon img {
+        width: 32px;
+        height: 32px;
+        font-weight: 150;
+    }
+
+    .opening-hours-content td {
+        font-size: 17px;
+        padding: 10px 30px;
+        padding-left: 0;
+    }
+
+    .opening-hours-content td:last-child {
+        padding: 10px 0;
+    }
+
+    .opening-hours-section {
         align-items: center;
     }
 }
@@ -180,6 +226,11 @@
 @media (max-width: 767px) {
     .location-text p {
         max-width: 350px;
+    }
+
+    .contact-map iframe {
+        width: 400px;
+        height: 400px;
     }
 }
   
