--- a/css/gallery.css
+++ b/css/gallery.css
@@ -93,6 +93,10 @@
     .gallery-text p {
         max-width: 500px;
     }
+
+    .gallery {
+        padding: 60px 0px;
+    }
 }
   
 /* Mobile Landscape */
@@ -105,6 +109,10 @@
 
     .gallery-text p {
         max-width: 420px;
+    }
+
+    .gallery {
+        padding: 50px 0px;
     }
 }
 
@@ -126,5 +134,9 @@
 
     .gallery-text p {
         max-width: 250px;
+    }
+
+    .gallery {
+        padding: 40px 0px;
     }
 }
