--- a/css/navbar.css
+++ b/css/navbar.css
@@ -166,15 +166,61 @@
 
 /* Tablet */
 @media (max-width: 900px) {
-    
+
 }
   
 /* Mobile Landscape */
 @media (max-width: 767px) {
-    
+    .navbar .logo img {
+        width: 80px;
+    }
+
+    .order-now {
+        padding: 3px 5px;
+        font-weight: 700;
+        transition: color 0.3s;
+    }
+
+    .order-now a {
+        font-size: 12px;
+    }
+
+    .navbar .nav-links {
+        top: 57px;
+    }
 }
   
 /* Mobile Portrait */
 @media (max-width: 479px) {
-    
+    .navbar .logo img {
+        width: 70px;
+    }
+
+    .order-now {
+        padding: 2px 4px;
+        font-weight: 700;
+        transition: color 0.3s;
+    }
+
+    .order-now a {
+        font-size: 10px;
+    }
+
+    .navbar .nav-container .order-now a {
+        margin-left: 0;
+        margin-right: 15px;
+    }
+
+    .logo {
+        padding: 0 20px;
+    }
+
+    .hamburger img {
+        height: 20px;
+        margin-right: 20px;
+    }
+
+    .navbar .nav-links {
+        top: 53px;
+    }
 }
